# pii_extraction_api

./: README.md  main.py  pyproject.toml
pii_extraction_api/api/: TextAnalitycsApi.py
pii_extraction_api/models/: PiiEntity.py  healthcare_models.py  key_phrase_model.py  pii_models.py  text_ai_base_model.py
pii_extraction_api/services/: text_ai_service.py
tests/: test_key_phrases.py  test_pii_entity.py  test_text_ai_service.py
