[tool.poetry]
name = "pii-extraction-api"
version = "0.1.0"
description = ""
authors = ["Evgeniy Bliacher <evgeniy.bliacher@alterahealth.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
